# evaljobs

./: .gitignore  Dockerfile.template  README.md  pyproject.toml
evaljobs/: __init__.py  cli.py  dataset.py  docker_space.py  runner.py
examples/: midicaps_eval.py  simpleqa_verified_custom.py
